# queue-system

./: .gitignore  Makefile
api/: .env.example  .gitignore  .pylintrc  mypy.ini  pyproject.toml
api/app/: exceptions.py  main.py  routers.py
api/app/auth/: controller.py  models.py  service.py
api/app/middleware/: __init__.py
api/app/models/: users.py
api/app/services/: health.py
api/app/settings/: config.py  database.py
api/app/tasks/: consumer.py  controller.py  models.py  service.py
api/app/tasks/queue/: __init__.py  handlers.py  manager.py  services.py
api/app/users/: controller.py  models.py  service.py
api/app/utils/: __init__.py  timezone.py
api/tests/: conftest.py  test_auth_service.py  test_timezone_utils.py  test_users_service.py
api/tests/e2e/: test_auth_endpoints.py  test_users_endpoints.py
